// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AdminConsolePluginsIndex.getPluginEntries should return map with the text extracted from plugins 1`] = `
Object {
  "plugin_mattermost-autolink": Array [
    "PluginSettings.PluginStates.mattermost-autolink.Enable",
    "Enable plugin",
    "Disable plugin",
    "Uninstall plugin",
    "Enabled",
    "Disabled",
    "Autolink",
    "mattermost-autolink",
    "Configure this plugin directly in the config.json file. Learn more in our documentation. To report an issue, make a suggestion or a contribution, check the plugin repository.",
    "Enable administration with /autolink command",
    "EnableAdminCommand",
  ],
}
`;

exports[`AdminConsolePluginsIndex.getPluginEntries should return map with the text extracted from plugins 2`] = `
Object {
  "plugin_Some-random-plugin": Array [
    "PluginSettings.PluginStates.Some-random-plugin.Enable",
    "Enable plugin",
    "Disable plugin",
    "Uninstall plugin",
    "Enabled",
    "Disabled",
    "Random",
    "Some-random-plugin",
    "random plugin footer",
    "random plugin header",
    "Generate with /generateRand command",
    "/generateRand 10",
    "GenerateRandomNumber",
    "set range with /setRange command",
    "setRange",
  ],
  "plugin_mattermost-autolink": Array [
    "PluginSettings.PluginStates.mattermost-autolink.Enable",
    "Enable plugin",
    "Disable plugin",
    "Uninstall plugin",
    "Enabled",
    "Disabled",
    "Autolink",
    "mattermost-autolink",
    "Configure this plugin directly in the config.json file. Learn more in our documentation. To report an issue, make a suggestion or a contribution, check the plugin repository.",
    "Enable administration with /autolink command",
    "EnableAdminCommand",
  ],
}
`;
